added favicon and final tidy ups for the user

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway%7CRighteous" rel="stylesheet">
     <!--custom css-->
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Document</title>
+    <!--favicon-->
+    <link rel='shortcut icon' type='image/x-icon' href='love-maths-favicon.ico'>
+    <title>Love Maths!</title>
 </head>
 <body>
     <h1 class="heading">
